# stocks

./: .gitignore  .pre-commit-config.yaml  .prettierignore  Procfile  README.md  app.py  build.sh  env.py  manage.py  package.json  prettier.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  stocks.code-workspace  vercel.json
config/: settings.py  urls.py
src/: asgi.py  settings.py  urls.py  wsgi.py
static/stocks/css/: footer.css  style.css
stocks/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
stocks/infrastructure/: __init__.py
stocks/infrastructure/external_client/: __init__.py  tingo_stock_client.py
templates/: base.html
templates/components/: footer.html  navbar.html
templates/css/: css.html
templates/js/: js.html
templates/stocks/: about.html  cryto_list_view.html  cryto_view.html  error.html  home_page.html  stocks_details.html  table.html  ticker.html
