[project]
name = "stocks"
version = "1.0.0"
description = "Stocks app in python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=3.2,<3.3",
    "gunicorn>=26.0.0",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.2",
    "honcho>=2.0.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.14",
]
